--- a/blog-preview-card/style.css
+++ b/blog-preview-card/style.css
@@ -7,16 +7,19 @@ body {
     font-family: 'Figtree';
     text-align: justify;
 
-    height: auto;
+    width: 1440px;
+
+    /* height: auto; */
 }
 
 img {
     width: 100%;
-    height: auto;
+    /* height: auto; */
 }
 
 main {
     margin: auto;
+    margin-top: 10rem;
     background-color: white;
 
     border: 1px solid black;   
@@ -26,7 +29,6 @@ main {
 
     height: 522px;
 
-    min-width: 320px;
     max-width: 384px;
 }
 
@@ -40,7 +42,7 @@ main {
 }
 
 h1 {
-    font-size: 1.5em;
+    font-size: 1.5rem;
     font-weight: 800;
 }
 
@@ -65,7 +67,7 @@ a:hover {
     margin: auto;
     margin-bottom: 0.5em;
     margin-top: 1em;
-    font-size: 0.8em;
+    font-size: 0.8rem;
 
     transition: transform 0.3s;
 }
