--- a/blog-preview-card/style.css
+++ b/blog-preview-card/style.css
@@ -6,12 +6,15 @@ body {
     font-size: 16px;
     font-family: 'Figtree';
     text-align: justify;
-    height: auto;
+
+    width: 100%;
+    height: 100vh;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 
 img {
