--- a/blog-preview-card/style.css
+++ b/blog-preview-card/style.css
@@ -7,8 +7,8 @@ body {
     font-family: 'Figtree';
     text-align: justify;
 
-    width: 100%;
-    height: 100vh;
+    width: 1440px;
+    height: 96vh;
 
     display: flex;
     flex-direction: column;
@@ -113,7 +113,7 @@ p {
 }
 
 .attribution {
-    display: block;
+    display: inline;
     text-align: center;
 }
 
